ASUSFETest/src/objects/Service_Indicator__c.object
<CustomObject>
    <fields>
        <fullName>SI_Code__c</fullName>
        <label>Code</label>
        <picklist>
            <picklistValues>
                <fullName>A10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F11</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SI_Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Indicators</relationshipLabel>
        <relationshipName>Service_Indicators_Contact</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SI_Description__c</fullName>
        <label>Description</label>
        <picklist>
            <picklistValues>
                <fullName>Academic Administrative Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admissions Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admissions Hold 1 Semester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admissions VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising Applied Arts &amp; Sci</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising EITP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising Global Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising Graduate College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising Health Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising Herberger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising Honors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising Human Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising Journalism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising Letter and Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising Liberal Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising Liberal Arts Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising New College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising Nursing and Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising Public Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising Sustainability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising Teacher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advising Technology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SI_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SI_End_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Term</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Service Indicators (End Term)</relationshipLabel>
        <relationshipName>Service_Indicators_End_Term</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SI_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SI_Start_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Start Term</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Service Indicators</relationshipLabel>
        <relationshipName>Service_Indicators_Start_Term</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Indicator</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Service Indicator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Indicators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>